examples/good/06-01-factorial.lagger
// iteratively
int fact (int n) {
    int i;
    int r ;
    i = 1 ;
	r = 1 ;
	while (i < n+1) {
	    r = r * i ;
		i = i + 1 ;
    }
	return r ;
}

// recursively
int factr (int n) {
    if (n < 2) {
	    return 1 ;
    } else {
	    return (n * factr(n-1)) ;
    }
    return 0;
}

int main () {
    println(fact(7));
    println(factr(7));
    return 0;
}