examples/bad/06-05-invalid-reference.lagger
int f(int & n){
    n = 10;
    return n;
}

int main(){
    int x = f(2);
    return 0;
}